// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser print statements parses print lists with no separator 1`] = `
[
  Print {
    "expressions": [
      Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": BrsString {
          "inArray": false,
          "kind": 3,
          "value": "Foo",
        },
      },
      Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": BrsString {
          "inArray": false,
          "kind": 3,
          "value": "bar",
        },
      },
      Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": BrsString {
          "inArray": false,
          "kind": 3,
          "value": "baz",
        },
      },
    ],
    "tokens": {
      "print": {
        "isReserved": false,
        "kind": "Print",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
    },
  },
]
`;

exports[`parser print statements parses print lists with separators 1`] = `
[
  Print {
    "expressions": [
      Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": BrsString {
          "inArray": false,
          "kind": 3,
          "value": "Foo",
        },
      },
      {
        "isReserved": false,
        "kind": "Semicolon",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
      Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": BrsString {
          "inArray": false,
          "kind": 3,
          "value": "bar",
        },
      },
      {
        "isReserved": false,
        "kind": "Semicolon",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
      Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": BrsString {
          "inArray": false,
          "kind": 3,
          "value": "baz",
        },
      },
    ],
    "tokens": {
      "print": {
        "isReserved": false,
        "kind": "Print",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
    },
  },
]
`;

exports[`parser print statements parses singular print statements 1`] = `
[
  Print {
    "expressions": [
      Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": undefined,
      },
    ],
    "tokens": {
      "print": {
        "isReserved": false,
        "kind": "Print",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
    },
  },
]
`;

exports[`parser print statements supports empty print 1`] = `
[
  Print {
    "expressions": [
      Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": BrsString {
          "inArray": false,
          "kind": 3,
          "value": "",
        },
      },
    ],
    "tokens": {
      "print": {
        "isReserved": false,
        "kind": "Print",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
    },
  },
]
`;
